# om-lukhi-projects

./: .README.swp  Arduino uno  ILI9341_GFX.c  README.md  fonts.h  main.c
ILI9341_Display_Driver/: README.md
ILI9341_Display_Driver/application/: main.c
ILI9341_Display_Driver/drivers/: ILI9341_GFX.c  ILI9341_GFX.h  ILI9341_STM32_Driver.c  ILI9341_STM32_Driver.h  sketch_may24a.ino
ILI9341_Display_Driver/fonts/: fonts.c
audio-interface-sdk/iec60958-transfer-sdk/README/: Readme_SDMA
audio-interface-sdk/iec60958-transfer-sdk/SDK_24_12_00_EVK-MIMX8MP/: EVK-MIMX8MP_manifest_v3_15.xml  SW-Content-Register.txt
audio-interface-sdk/iec60958-transfer-sdk/SDK_24_12_00_EVK-MIMX8MP/boards/evkmimx8mp/cmsis_driver_examples/ecspi/int_loopback_transfer/: cmsis_ecspi_int_loopback_transfer_cm7_v3_15.xml
audio-interface-sdk/iec60958-transfer-sdk/SDK_24_12_00_EVK-MIMX8MP/boards/evkmimx8mp/cmsis_driver_examples/ecspi/sdma_loopback_transfer/: cmsis_ecspi_sdma_loopback_transfer_cm7_v3_15.xml
audio-interface-sdk/iec60958-transfer-sdk/SDK_24_12_00_EVK-MIMX8MP/boards/evkmimx8mp/cmsis_driver_examples/enet/txrx_transfer/: cmsis_enet_txrx_transfer_cm7_v3_15.xml
audio-interface-sdk/iec60958-transfer-sdk/SDK_24_12_00_EVK-MIMX8MP/boards/evkmimx8mp/cmsis_driver_examples/uart/interrupt_transfer/: cmsis_iuart_interrupt_transfer_cm7_v3_15.xml
audio-interface-sdk/iec60958-transfer-sdk/SDK_24_12_00_EVK-MIMX8MP/boards/evkmimx8mp/cmsis_driver_examples/uart/sdma_transfer/: cmsis_iuart_sdma_transfer_cm7_v3_15.xml
audio-interface-sdk/iec60958-transfer-sdk/SDK_24_12_00_EVK-MIMX8MP/boards/evkmimx8mp/demo_apps/hello_world/: hello_world_cm7_v3_15.xml
audio-interface-sdk/iec60958-transfer-sdk/SDK_24_12_00_EVK-MIMX8MP/boards/evkmimx8mp/demo_apps/hello_world/armgcc/: CMakeLists.txt
audio-interface-sdk/iec60958-transfer-sdk/SDK_24_12_00_EVK-MIMX8MP/boards/evkmimx8mp/demo_apps/low_power_wakeword/: low_power_wakeword_cm7_v3_15.xml
audio-interface-sdk/iec60958-transfer-sdk/SDK_24_12_00_EVK-MIMX8MP/boards/evkmimx8mp/demo_apps/low_power_wakeword/armgcc/: CMakeLists.txt  config.cmake  flags.cmake
audio-interface-sdk/iec60958-transfer-sdk/SDK_24_12_00_EVK-MIMX8MP/boards/evkmimx8mp/demo_apps/sai_low_power_audio/: sai_low_power_audio_cm7_v3_15.xml
audio-interface-sdk/iec60958-transfer-sdk/SDK_24_12_00_EVK-MIMX8MP/boards/evkmimx8mp/demo_apps/sai_low_power_audio/armgcc/: CMakeLists.txt  config.cmake  flags.cmake
audio-interface-sdk/iec60958-transfer-sdk/SDK_24_12_00_EVK-MIMX8MP/boards/evkmimx8mp/demo_apps/xcvr_iec958/: app.h  frames_raw_PCM.h  mcux_config.h  my_app.c  pin_mux.c  test_app.c
audio-interface-sdk/iec60958-transfer-sdk/SDK_24_12_00_EVK-MIMX8MP/boards/evkmimx8mp/demo_apps/xcvr_iec958/armgcc/: CMakeCache.txt  CMakeLists.txt  MIMX8ML8xxxLZ_ram.ld  Makefile  build_debug.bat  build_debug.sh  build_log.txt  build_release.bat  cmake_install.cmake  config.cmake  flags.cmake  output.map
audio-interface-sdk/iec60958-transfer-sdk/SDK_24_12_00_EVK-MIMX8MP/boards/evkmimx8mp/demo_apps/xcvr_iec958/armgcc/debug/: xcvr_iec958.elf
audio-interface-sdk/iec60958-transfer-sdk/SDK_24_12_00_EVK-MIMX8MP/boards/evkmimx8mp/driver_examples/pwm/: ipwm_cm7_v3_15.xml
audio-interface-sdk/iec60958-transfer-sdk/SDK_24_12_00_EVK-MIMX8MP/boards/evkmimx8mp/driver_examples/rdc/: rdc_cm7_v3_15.xml
audio-interface-sdk/iec60958-transfer-sdk/SDK_24_12_00_EVK-MIMX8MP/boards/evkmimx8mp/driver_examples/wdog/: wdog01_cm7_v3_15.xml
audio-interface-sdk/iec60958-transfer-sdk/SDK_24_12_00_EVK-MIMX8MP/boards/evkmimx8mp/freertos_examples/freertos_event/: freertos_event_cm7_v3_15.xml
audio-interface-sdk/iec60958-transfer-sdk/SDK_24_12_00_EVK-MIMX8MP/boards/evkmimx8mp/freertos_examples/freertos_generic/: freertos_generic_cm7_v3_15.xml
audio-interface-sdk/iec60958-transfer-sdk/SDK_24_12_00_EVK-MIMX8MP/boards/evkmimx8mp/freertos_examples/freertos_hello/: freertos_hello_cm7_v3_15.xml
audio-interface-sdk/iec60958-transfer-sdk/SDK_24_12_00_EVK-MIMX8MP/boards/evkmimx8mp/freertos_examples/freertos_mutex/: freertos_mutex_cm7_v3_15.xml
audio-interface-sdk/iec60958-transfer-sdk/SDK_24_12_00_EVK-MIMX8MP/boards/evkmimx8mp/freertos_examples/freertos_queue/: freertos_queue_cm7_v3_15.xml
audio-interface-sdk/iec60958-transfer-sdk/SDK_24_12_00_EVK-MIMX8MP/boards/evkmimx8mp/freertos_examples/freertos_sem/: freertos_sem_cm7_v3_15.xml
audio-interface-sdk/iec60958-transfer-sdk/SDK_24_12_00_EVK-MIMX8MP/boards/evkmimx8mp/freertos_examples/freertos_sem_static/: freertos_sem_static_cm7_v3_15.xml
audio-interface-sdk/iec60958-transfer-sdk/SDK_24_12_00_EVK-MIMX8MP/boards/evkmimx8mp/freertos_examples/freertos_swtimer/: freertos_swtimer_cm7_v3_15.xml
audio-interface-sdk/iec60958-transfer-sdk/SDK_24_12_00_EVK-MIMX8MP/boards/evkmimx8mp/freertos_examples/freertos_tickless/: freertos_tickless_cm7_v3_15.xml
audio-interface-sdk/iec60958-transfer-sdk/SDK_24_12_00_EVK-MIMX8MP/devices/MIMX8ML8/: MIMX8ML8_cm7_COMMON.h  all_lib_device.cmake
audio-interface-sdk/iec60958-transfer-sdk/SDK_24_12_00_EVK-MIMX8MP/devices/MIMX8ML8/drivers/: driver_xcvr.MIMX8ML8.cmake  fsl_xcvr.c  fsl_xcvr.h
audio-interface-sdk/iec60958-transfer-sdk/SDK_24_12_00_EVK-MIMX8MP/devices/MIMX8ML8/gcc/: startup_MIMX8ML8_cm7.S
audio-interface-sdk/pcm-iec60958-codec-app/: Makefile  ReadMe_IEC958_ENC_DEC.txt
audio-interface-sdk/pcm-iec60958-codec-app/app/: Makefile  app-iec60958-enc-dec  iec60958-enc-dec-main.c
audio-interface-sdk/pcm-iec60958-codec-app/libiec958-custom/: Makefile  iec958_custom.c  iec958_custom.h
(+157 files in other folders)
